--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <div class="title">
     <title>🌺 Juliette 🌺</title>
+    </div>
 </head>
 <body>
+    <div class="name">
+    <h1> J U L I E T T E </h1>
+    </div>
+
+    <img src="images/portpic.jpg" class="me">
+    <h2>Mom, Creator, Developer</h2>
+
+    <h3>My Projects</h3>
+
+    <h4>About Me</h4>
+
+    <p>Like mentioned above, I am a mom, a creator, and (not only)professionally, I am a developer. All my passion lies in creation and that includes a real passion for software development. </p>
+        
+    <p>I found myself going down the software development road when I realized I had to get serious about finding a career, not just a job. I wanted to do something that allowed me to be a mom at home, something that allowed me to bring my creativity to the workforce, and something I would really enjoy. This journey started with a self-taught title to go along with it, but then I attended a full-stack Javascript bootcamp. (Yep, I'm a bootcamp grad, and proud of it!) Saying that, I'm really interested in all aspects of development, front to back, but I have my niches (who doesn't?). I looove making things look nice(and accessible!), and I think that's just the creator in me, so you bet UI/UX design is right up my alley. Also, a total game nerd over here, so game development is an absolute dream. </p>
+
+    <p>Other than creating software, I'm all about creating anything, really. I was in art starting from elementary school continuing through the rest of my education. I took two years of woodshop in middle school, not to mention doing the little wooden craft kits my whole life. I like to dabble with acrylics and have a couple "acrylic pour" paintings under my belt. I could probably go on with the list forever. If there's a creative outlet you can name, I'd enjoy it.</p>
     
 </body>
 </html>
