--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Twinkle+Star&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,13 +20,16 @@
     </div>
 
     <img src="images/portpic.jpg" class="me">
+
+    <div class="headings">
     <h2>Mom, Creator, Developer</h2>
 
     <h3>My Projects</h3>
 
     <h4>About Me</h4>
+    </div>
 
-    <p>Like mentioned above, I am a mom, a creator, and (not only)professionally, I am a developer. All my passion lies in creation and that includes a real passion for software development. </p>
+    <p>Like mentioned above, I am a mom, a creator, and (not only)professionally, I am a developer. All my passion lies in creation and that includes a real passion for software development.</p>
         
     <p>I found myself going down the software development road when I realized I had to get serious about finding a career, not just a job. I wanted to do something that allowed me to be a mom at home, something that allowed me to bring my creativity to the workforce, and something I would really enjoy. This journey started with a self-taught title to go along with it, but then I attended a full-stack Javascript bootcamp. (Yep, I'm a bootcamp grad, and proud of it!) Saying that, I'm really interested in all aspects of development, front to back, but I have my niches (who doesn't?). I looove making things look nice(and accessible!), and I think that's just the creator in me, so you bet UI/UX design is right up my alley. Also, a total game nerd over here, so game development is an absolute dream. </p>
 
