--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <a>About</a>
                 </li>
                 <li>
-                  <a>Contact</a>
+                  <a href="/contact.html">Contact</a>
                 </li>      
                 <li>
                   <a>Projects</a>
