started projects page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <a href="/contact.html">Contact</a>
                 </li>      
                 <li>
-                  <a>Projects</a>
+                  <a href="/projects.html">Projects</a>
                 </li>
               </ul>
             </div>
@@ -75,7 +75,7 @@
 
     <h3 class="headings">Services / Skills</h3>
 
-    <p>I offer web development and design services. Contact me <a>here</a>.</p>
+    <p>I offer web development and design services. Contact me <a href="/contact.html">here</a>.</p>
 
     <h4>Skills</h4>
 
