--- a/projects.html
+++ b/projects.html
@@ -48,14 +48,46 @@
 
    <h2 class="titles" id="title">My Work</h2>
 
-   <div class="vine">
-
    <div class="stalk">
-   <div class="leaf1" onclick="" ><a href="#"></a></div>
-   <div class="leaf2" onclick=""><a href="#"></a></div>
-   <div class="leaf3" onclick=""><a href="#"></a></div>
-   <div class="leaf4" onclick=""><a href="#"></a></div>
-   <div class="leaf5" onclick=""><a href="#"></a></div>
+
+   <div class="leaf1"></div>
+
+   <div class="back1">
+     <a href="https://github.com/JulietteL14307/callback-cats" target="_blank">
+       <p>CRUD Application</p>
+     </a>
+   </div>
+
+   <div class="leaf2"></div>
+
+   <div class="back2">
+     <a href="https://frosty-mirzakhani-5dd18f.netlify.app/" target="_blank">
+      <p>Business Portfolio</p>
+     </a>
+   </div>
+
+   <div class="leaf3"></div>
+
+   <div class="back3">
+    <a href="https://codepen.io/juliettel14307/pen/PoWVxzg" target="_blank">
+      <p>Tribute Page</p>
+    </a>
+   </div>
+
+   <div class="leaf4"></div>
+
+   <div class="back4">
+    <a href="https://codepen.io/juliettel14307/pen/xxgqEQM" target="_blank">
+      <p>Survey Form</p>
+    </a>
+   </div>
+
+   <div class="leaf5"></div>
+
+   <div class="back5">
+    <a href="https://github.com/JulietteL14307/BasicJavaDemos" target="_blank">
+      <p>Java Tutorials</p>
+    </a>
    </div>
 
    </div>
